  - Minor fix to ExpandXMLPackage to not throw an exception in brief mode if module is not compatible with the current version of CMSMS.
  - adds new cms_entities_array function in misc to convert an array recursively to values.
  - Fixes transposed arguments in UserOperations::AddMemberGroup() 
  - Better detection of duplicate content blocks.

CmsJobManager v0.1.1
  - Optimization of audit logging.
  - Change connection timeout to 1 second.
  - Change processing to be a little more friendly to some environments wrt. content-size header.
  - Prevent processing from the CLI when root_url is calculated

MicroTiny v2.2.1
  - Minor fix for filepicker plugin.

News v2.51.3
  - For security, no longer urldecode the detailtemplate parameter in detail view.
    This may have some implications for people that are specifying the detailtemplate parameter (with a template with special characters) from within a WYSIWYG (which is not recommended behavior).
  - Convert title and dropdown options and text fields to entities before display.

ModuleManager v2.1.2
  - Now sort modules in the installed tab a bit better.
  - Now handle module 'not available' a bit better.

FileManager v1.6.4
  - Add a different icon for navigating up one level.
  - No longer allow uploading any php (or derivative) file.
  - No longer allow renaming any file to have a .php extension (or a derivative).
  - Fixes an issue when improper/invalid values for root path and uploads path are manually specified in the config.php

FilePicker v1.0.1
  - No longer allow overriding the filepicker type on the URL.
  - No longer allow uploading any .php files.

CMSContentmanager v1.1.6
  - Now double check that the 'default parent' for new pages actually exists.

Navigator v1.0.8
  - Minor english documentation correction.

Installation Assistant v1.3.3
  - Now look for lib/include.php before include.php in step 8 and step 9 when connecting to CMSMS.